# demo

./: .envrc  .gitignore  COMMIT_MSG.txt  COMMIT_MSG_FINAL.txt  COMMIT_MSG_PASS0.txt  COMMIT_MSG_PASS1.txt  COMMIT_MSG_PASS2.txt  COMMIT_MSG_PASS3.txt  COMMIT_MSG_PRODUCTION.txt  README.md  demo.cabal  flake.nix
app/: Demo.hs  Elaboration.hs  Notes.hs  Slides.hs
examples/: DemoPresentation.hs  ExamplePresentation.hs  PanharmoniconDeploymentPresentation.hs  TestLiterate.lhs
scripts/: cachix-push.sh
src/Demo/: Loader.hs
src/Demo/Core/: DSL.hs  FreeUI.hs  Handlers.hs  Types.hs  Variable.hs  Zipper.hs
src/Demo/IPC/: Client.hs  Protocol.hs  Server.hs
src/Demo/Interpreter/: Ghci.hs  System.hs
src/Demo/UI/: Common.hs  Elaboration.hs  Notes.hs  Slides.hs
test/Demo/Core/: VariableSpec.hs
test/Demo/IPC/: ProtocolSpec.hs
test/Demo/Interpreter/: SystemSpec.hs
test/E2E/: FullFeatureSpec.hs
test/Integration/: IPCSpec.hs
